tests/ui/attributes/invalid-debugger-visualizer-target.rs
#[debugger_visualizer(natvis_file = "./foo.natvis.xml")]
//~^ ERROR the `debugger_visualizer` attribute cannot be used on functions
fn main() {}
